[package]
name = "google-service-account-json-key"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Google - Service account - JSON Key"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/google-rs"
homepage = "https://github.com/bk-rs/google-rs"
documentation = "https://docs.rs/google-service-account-json-key"
keywords = []
categories = []
readme = "README.md"

[dependencies]
serde = { version = "1", default-features = false, features = ["std", "derive"] }
serde-enum-str = { version = "0.3", default-features = false }
url = { version = "2", default-features = false, features = ["serde"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
