[package]
name = "google-service-account-oauth-access-token"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Google - Service account - OAuth Access Token"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/google-rs"
homepage = "https://github.com/bk-rs/google-rs"
documentation = "https://docs.rs/google-service-account-oauth-access-token"
keywords = []
categories = []
readme = "README.md"

[dependencies]
google-service-account-oauth-jwt-assertion = { version = "0.1", default-features = false, features = ["google-service-account-json-key"], path = "../google-service-account-oauth-jwt-assertion" }
oauth2-google = { version = "0.2", default-features = false }
oauth2-client = { version = "0.2", default-features = false, features = ["with-flow"] }

http-api-isahc-client = { version = "0.2", default-features = false }

arc-swap = { version = "1", default-features = false }
once_cell = { version = "1", default-features = false }

async-sleep = { version = "0.4", default-features = false, features = ["timeout"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

async-sleep = { version = "0.4", features = ["impl_tokio"] }
