[package]
name = "google-service-account-oauth-jwt-assertion-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "google_service_account_oauth_jwt_assertion_gen"
path = "src/bin/google_service_account_oauth_jwt_assertion_gen.rs"

[dependencies]
google-service-account-oauth-jwt-assertion = { version = "0.1", features = ["google-service-account-json-key"], path = "../" }
