[package]
name = "google-service-account-oauth-jwt-assertion-cli"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Google - Service account - OAuth JWT Assertion Cli"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/google-rs"
homepage = "https://github.com/bk-rs/google-rs"
documentation = "https://docs.rs/google-service-account-oauth-jwt-assertion-cli"
keywords = []
categories = []
readme = "README.md"

[[bin]]
name = "google_service_account_oauth_jwt_assertion_gen"
path = "src/bin/google_service_account_oauth_jwt_assertion_gen.rs"

[dependencies]
google-service-account-oauth-jwt-assertion = { version = "0.1", features = ["google-service-account-json-key"], path = "../" }
